# c2c

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-research-paper.yml
configs/: README.md  bigquery.example.json  postgres.example.json
docs/: research-paper.md
docs/architecture/: evaluation-framework.md  platform-architecture.md  semantic-layer-strategy.md
docs/connectors/: connector-catalog.md
evaluation/: README.md
evaluation/benchmarks/: README.md  semantic_sales_v1.json
evaluation/gold/: README.md
evaluation/rubrics/: README.md
evaluation/workloads/: README.md
organization_context/: README.md  business_glossary.json  governance_rules.json  org_context.json
scripts/: build_pages.py
src/: artifacts.py  cli.py  config.py  integrations.py  serialization.py
src/connectors/: __init__.py  base.py  registry.py
src/discovery/: __init__.py  metadata_repository.py  runner.py  service.py  (+1 more)
tests/: fake_bigquery_module.py  fake_dbapi_module.py  test_bigquery_connector.py  test_cli.py  test_config.py  test_connector_runner.py  test_csv_connector_governance.py  test_database_executors.py  test_filesystem_connector.py  test_policy_loader.py  test_postgres_connector.py  test_schema_snapshot.py  test_semantic_contracts.py  test_semantic_layer_repository.py  test_semantic_quality.py  test_semantic_synthesizer.py  test_snapshot_repository.py  test_ui_server.py  test_workflow_database.py  test_workflow_local_csv.py  test_workflow_local_filesystem.py  test_workflow_with_policies.py
ui/: __init__.py  app.js  index.html  server.py  styles.css
(+33 files in other folders)
