[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos2clarity"
version = "0.1.0"
description = "Python-first architecture for an LLM-orchestrated BI layer over heterogeneous enterprise data"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Chaos 2 Clarity" }
]
dependencies = [
  "markdown>=3.6",
]

[project.scripts]
c2c = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
